--- a/main.html
+++ b/main.html
@@ -98,7 +98,7 @@
     });
 </script>
 <div id="hd">
-    <h1 class="tit-layout">南邮本部+仙林网络拓朴图</h1>
+    <h1 class="tit-layout"网络拓朴图</h1>
 </div>
 <div id="bd">
     <div id="side">
@@ -149,9 +149,6 @@
     </div>
 </div>
 
-<div id="ft">
-    <address class="copyright">Copyright &copy; <a href="http://blog.doyoe.com/">yingqin678</a></address>
-</div>
 
 </body>
 </html>
